# build-service

./: .gitignore  Cargo.toml  Makefile  README.en.md  README.md
configs/: agent.ini  agent.test.ini  buildsvc.ini  server.ini  server.test.ini
docs/: architecture.md  overview-product-dev.md  overview-product.md
docs/dev/: 1-plan-buildsvc-mvp.md  1-research-buildsvc-mvp.md  1-summary-buildsvc-mvp.md  10-fix-buildsvc-self-restart.md  11-task-agent-run-workspace-cleanup.md  12-task-flexible-archive-root.md  13-task-agent-script-permissions.md  14-plan-agent-machine-shutdown.md  14-research-agent-machine-shutdown.md  14-summary-agent-machine-shutdown.md  2-task-run-delete.md  3-task-build-delete.md  4-task-agent-terminal.md  5-task-linux-packaging.md  6-task-agent-package-upgrade.md  7-task-web-ui-tabs.md  8-task-package-systemd-hooks.md  9-task-agent-token-autogen.md  README.md
packaging/: buildsvc.ini  buildsvc.service  package.sh
src/: agent.rs  archive.rs  cli.rs  config.rs  ids.rs  main.rs  protocol.rs  storage.rs
src/server/: mod.rs  ui.rs
